<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="50dp"
    android:layout_marginTop="50dp"
    android:background="@color/colorWhite"
    android:minWidth="320dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textColor="#696969"
        android:textSize="30dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorBackground" />

    <ImageView
        android:id="@+id/imageview_mini"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/puzzle_icon" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/your_score"
        android:textSize="23dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/record_item_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:weightSum="1">

            <TextView
                android:id="@+id/y_score_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/your_time"
                android:textSize="14sp"
                android:layout_weight="0.45" />

            <TextView
                android:id="@+id/time_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/y_score_textview"
                android:text="0:25:482"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_weight="3"
            android:weightSum="1">

            <TextView
                android:id="@+id/moves_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/moves"
                android:textSize="14sp"
                android:layout_weight="0.5" />
            <TextView
                android:id="@+id/moves_counter_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="43"
                android:textSize="13sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/try_again_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/try_again"
            android:textAlignment="center"
            android:background="@color/redButton"
            android:textColor="@color/colorWhite"
            android:textSize="14dp" />

    </LinearLayout>
</LinearLayout>