<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:text="0:00:00"
            android:id="@+id/timer_textview"/>
        <TextView
            android:id="@+id/times_moved_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="15dp"
            android:layout_column="14"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorWhite"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <FrameLayout
        android:layout_marginTop="5pt"
        android:id="@+id/puzzle_container"
        android:layout_width="350dp"
        android:padding="1dp"
        android:layout_gravity="center"
        android:layout_height="350dp"
        android:background="@color/colorBackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25pt"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        >

        <ToggleButton
            android:layout_width="55pt"
            android:layout_height="25pt"
            android:background="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/show_hints"
            android:textOn="@string/hide_hints"
            android:textOff="@string/show_hints"
            android:id="@+id/hints_toggle_button"
            />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="55pt"
            android:layout_height="25pt"
            android:background="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/restart"
            android:id="@+id/restart_button"
            />

    </LinearLayout>

</LinearLayout>